atualizacao 05 - Conversao e validacao de dados

--- a/bco/livraria.properties
+++ b/bco/livraria.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.3
-#Wed Nov 11 15:49:44 GMT-03:00 2015
+#Mon Jun 20 14:14:18 PDT 2016
 version=2.3.3
 modified=yes
 tx_timestamp=0
