atualizacao 07 - Nacegacao e o ciclo de vida dos componentes JSF

--- a/bco/livraria.properties
+++ b/bco/livraria.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.3
-#Mon Jun 20 14:14:18 PDT 2016
+#Tue Jun 21 17:32:30 BRT 2016
 version=2.3.3
 modified=yes
 tx_timestamp=0
